--- a/src/styles/components/_auth.scss
+++ b/src/styles/components/_auth.scss
@@ -1,9 +1,8 @@
 .auth__main {
-   align-items: center;
    background-color: $primary;
    display: flex;
-   justify-content: center;
-   margin: 0px;
+   flex-direction: column;
+   align-items: center;
    height: 100vh;
    width: 100vw;
 }
@@ -12,8 +11,20 @@
    background-color: white;
    box-shadow: 0px 3px $dark-grey;
    border-radius: 2px;
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+   margin-top: 10rem;
+   margin-bottom: 2rem;
    padding: 20px;
-   width: 250px;
+   width: 350px;
+   height: 350px;
+}
+
+.auth__form {
+   display: flex;
+   flex-direction: column;
+   align-items: center;
 }
 
 .auth__title {
@@ -25,9 +36,9 @@
    color: $dark-grey;
    border: 0px;
    border-bottom: 1px solid $light-grey;
-   font-size: 1rem;
+   font-size: 1.5rem;
    margin-bottom: 10px;
-   height: 20px;
+   height: 30px;
    width: 100%;
 
    transition: border-bottom 0.3s ease;
