--- a/src/styles/components/_auth.scss
+++ b/src/styles/components/_auth.scss
@@ -9,16 +9,18 @@
 
 .auth__box-container {
    background-color: white;
-   box-shadow: 0px 3px $dark-grey;
-   border-radius: 2px;
+   box-shadow: 5px 5px 20px $dark-grey, -5px -5px 20px $dark-grey;
+   border: 1px solid black;
+   border-radius: 10%;
    display: flex;
    flex-direction: column;
    align-items: center;
    margin-top: 10rem;
    margin-bottom: 2rem;
    padding: 20px;
-   width: 350px;
-   height: 350px;
+   min-width: 400px;
+   max-width: auto;
+   height: auto;
 }
 
 .auth__form {
@@ -32,19 +34,22 @@
    margin-bottom: 20px;
 }
 
+.auth__label {
+   font-size: 1.3rem;
+}
+
 .auth__input {
    color: $dark-grey;
-   border: 0px;
-   border-bottom: 1px solid $light-grey;
+   border: 1px solid darken($color: $light-grey, $amount: 40);
    font-size: 1.5rem;
    margin-bottom: 10px;
    height: 30px;
-   width: 100%;
+   width: 120%;
 
-   transition: border-bottom 0.3s ease;
+   transition: border 0.5s ease;
 
    &:focus {
-      border-bottom: 1px solid $primary;
+      border: 1px solid $primary;
       outline: none;
    }
 }
