--- a/src/styles/components/_buttons.scss
+++ b/src/styles/components/_buttons.scss
@@ -13,7 +13,7 @@
 
 .btn-primary {
    background-color: darken($color: $primary, $amount: 10);
-   border: 2px;
+   border: 1px solid black;
 
    &:disabled {
       background-color: lighten($color: $primary, $amount: 15);
@@ -23,6 +23,13 @@
 
 .btn-block {
    width: 60%;
+}
+
+.btn-login,
+.bnt-register {
+   width: 14rem;
+   height: 2.5rem;
+   font-size: 1rem;
 }
 
 .btn-danger {
